camios por comentarios PR